--- a/Cart.css
+++ b/Cart.css
@@ -50,3 +50,76 @@ body{
     color: #000;
     font-size: 17px;
 }
+
+
+.PopUpLogin{
+    width: fit-content;
+    height: fit-content;
+    display: none;
+}
+
+.Overlay{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 4;
+}
+
+.ContentLogin{
+    border-radius: 15px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    width: 450px;
+    height: 400px;
+    box-sizing: border-box;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.ContentLogin .InputText{
+    outline: none;
+    width: 80%;
+    padding: 0.7vh 0vw;
+    border-radius: 9999px;
+    border: 1px solid #D9D9D9;
+    padding-left: 1vw;
+    font-size: 16px;
+    color: black;
+    font-weight: 400;
+    margin-top: 3vh;
+}
+
+.ContentLogin .Login{
+    background-color: black;
+    width: 80%;
+    color: white;
+    padding: 1vh 0vw;
+    border-radius: 9999px;
+    font-size: 19px;
+    margin-top: 5vh;
+}
+
+.ContentLogin .Login:hover{
+    background-color: rgb(169, 169, 169);
+    color: black;
+}
+
+.ContentLogin .Close{
+    margin: 1.5vh 0 1.5vh 90%;
+    font-size: 16px;
+    color: rgb(44, 44, 44);
+    transition: all 0.2s ease-in-out;
+}
+
+.ContentLogin .Close:hover{
+    transform: scale(1.2);
+}
